--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -75,9 +75,9 @@ jobs:
 
           for file in $PUSH_FILES; do
             for i in "${!ALGO_NAMES[@]}"; do
-              echo "$file == ${ALGO_NAMES[$i]}"
+              echo "$file == ${ALGO_NAMES[$i]} ?"
               if [[ $file == *"${ALGO_NAMES[$i]}"* ]]; then
-                echo "matched ${ALGO_NAMES[$i]}"
+                echo "$file matched ${ALGO_NAMES[$i]}"
                 ALGO_PLUGIN_MAP["${ALGO_NAMES[$i]}"]="${PLUGIN_NAMES[$i]}"
               fi
             done
