--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -94,7 +94,7 @@ jobs:
           echo "branch_to_test=${{ github.ref }}" >> "$GITHUB_OUTPUT"
 
           matrix_include=$(for i in "${!ALGO_TO_TEST[@]}"; do echo "{\"algo_name\":\"${ALGO_TO_TEST[$i]}\", \"plugin_name\":\"${PLUGIN_TO_TEST[$i]}\"}"; done | jq -s .)
-          echo "matrix={\"include\":[$matrix_include]}"
+          echo "matrix={\"include\":$matrix_include}"
 
           # echo ${{ env.matrix }}
           # MATRIX="matrix={\"include\":\"algo_name\": [${{ env.ALGO_TO_TEST }}], \"plugin_name\": [${{ env.PLUGIN_TO_TEST }}}"
