--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -75,15 +75,16 @@ jobs:
 
           for file in $PUSH_FILES; do
             for i in "${!ALGO_NAMES[@]}"; do
-              echo "$file == ${ALGO_NAMES[$i]} ?"
+              # Check if the file name contains the algorithm name
               if [[ $file == *"${ALGO_NAMES[$i]}"* ]]; then
-                echo "$file matched ${ALGO_NAMES[$i]}"
+                # Add algo name and corresponding plugin name to the associative array
                 ALGO_PLUGIN_MAP["${ALGO_NAMES[$i]}"]="${PLUGIN_NAMES[$i]}"
               fi
             done
           done
-
+          # Extract keys (algo_name) from ALGO_PLUGIN_MAP map
           ALGO_TO_TEST=(${!ALGO_PLUGIN_MAP[@]})
+          # Extract values (plugin_name) from ALGO_PLUGIN_MAP map
           PLUGIN_TO_TEST=(${ALGO_PLUGIN_MAP[@]})
 
           echo "ALGO_TO_TEST=${ALGO_TO_TEST[*]}" >> "$GITHUB_ENV"
@@ -94,12 +95,7 @@ jobs:
           echo "branch_to_test=${{ github.ref }}" >> "$GITHUB_OUTPUT"
 
           matrix_include=$(for i in "${!ALGO_TO_TEST[@]}"; do echo "{\"algo_name\":\"${ALGO_TO_TEST[$i]}\", \"plugin_name\":\"${PLUGIN_TO_TEST[$i]}\"}"; done | jq -s .)
-          echo "matrix={\"include\":$matrix_include}"
-
-          # echo ${{ env.matrix }}
-          # MATRIX="matrix={\"include\":\"algo_name\": [${{ env.ALGO_TO_TEST }}], \"plugin_name\": [${{ env.PLUGIN_TO_TEST }}}"
-          # echo "$MATRIX"
-          # echo "$MATRIX" >> "$GITHUB_OUTPUT"
+          echo "matrix={\"include\":$matrix_include}" >> "$GITHUB_OUTPUT"
 
       # - name: Set up job matrix
       #   uses: actions/github-script@v4
