--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -8,7 +8,7 @@ name: v2 Pre-build Checks
 
 env:
   PLUGIN_NAME: 'accumulated-local-effect'
-  ALGO_NAMES:  'accumulated-local-effect, robustness-toolbox, shap-toolbox'
+  ALGO_NAMES:  'accumulated_local_effect, robustness_toolbox, shap_toolbox'
   PLUGIN_NAMES: 'accumulated-local-effect, robustness-toolbox, shap-toolbox'
  
   GH_TOKEN: ${{ github.token }}
@@ -62,14 +62,13 @@ jobs:
 
     steps:
 
-      - name: Set branch variable (push)
-        id: init
+      - name: Prepare matrix (push)
+        id: prep-matrix-push
         if: github.event_name == 'push'
         run: |
           echo "BRANCH_TO_TEST=${{ github.ref }}" >> "$GITHUB_ENV"
           echo "PUSH_COMMIT=${{ github.sha }}" >> "$GITHUB_ENV"
           PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename')
-          # echo "PUSH_FILES=$PUSH_FILES" >> "$GITHUB_ENV"
           echo "Files changed in this push:"
           echo "$PUSH_FILES"
 
@@ -86,6 +85,7 @@ jobs:
               fi
             done
           done
+
           # Extract keys (algo_name) from ALGO_PLUGIN_MAP map
           ALGO_TO_TEST=(${!ALGO_PLUGIN_MAP[@]})
           # Extract values (plugin_name) from ALGO_PLUGIN_MAP map
@@ -96,33 +96,12 @@ jobs:
           echo "Algorithms to test: ${ALGO_TO_TEST[*]}"
           echo "Plugins to test: ${PLUGIN_TO_TEST[*]}"
 
-          # matrix_include=$(for i in "${!ALGO_TO_TEST[@]}"; do echo "{\"algo_name\":\"${ALGO_TO_TEST[$i]}\", \"plugin_name\":\"${PLUGIN_TO_TEST[$i]}\"}"; done | jq -s . | tr -d '\n')
           matrix_include=$(for i in "${!ALGO_TO_TEST[@]}"; do echo "{\"algo_name\":\"${ALGO_TO_TEST[$i]}\", \"plugin_name\":\"${PLUGIN_TO_TEST[$i]}\"}"; done | jq -s . | tr -d '[:space:]')
-
           MATRIX="{\"include\":$matrix_include}"
           echo $MATRIX
 
           echo "branch_to_test=${{ github.ref }}" >> "$GITHUB_OUTPUT"
           echo "matrix={\"include\":$matrix_include}" >> "$GITHUB_OUTPUT"
-
-      # - name: Set up job matrix
-      #   uses: actions/github-script@v4
-      #   id: set-matrix
-      #   with:
-      #     script: |
-      #       const fs = require('fs');
-      #       const matrix = JSON.parse(fs.readFileSync('matrix.json', 'utf8'));
-      #       return matrix;
-      #     result-encoding: string
-
-  test-job:
-    needs: init-pre-build-checks
-    runs-on: ubuntu-latest
-    steps:
-      - name: Print Matrix
-        run: |
-          echo "matrix = ${{ needs.init-pre-build-checks.outputs.matrix }}"    
-          echo "branch_to_test = ${{ needs.init-pre-build-checks.outputs.branch_to_test }}"
 
   run-pre-build-checks:
     needs: init-pre-build-checks
