--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -75,7 +75,8 @@ jobs:
         run: |
           echo "BRANCH_TO_TEST=${{ github.ref }}" >> "$GITHUB_ENV"
           echo "PR_NUM=000" >> $GITHUB_ENV
-          PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename')
+          PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename' | paste -sd "," -)
+          # PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename')
           echo "Files changed in this push:"
           echo "$PUSH_FILES"
           echo "CHANGED_FILES=${PUSH_FILES}" >> $GITHUB_ENV
@@ -119,7 +120,9 @@ jobs:
           PLUGIN_NAMES=(${PLUGIN_NAMES//,/ })
           declare -A ALGO_PLUGIN_MAP
 
-          for file in $FILE_LIST; do
+          IFS=',' read -ra FILE_ARRAY <<< "$FILE_LIST"
+          for file in "${FILE_ARRAY[@]}"; do
+          # for file in $FILE_LIST; do
             for i in "${!ALGO_NAMES[@]}"; do
               # Check if the file name contains the algorithm name
               if [[ $file == *"${ALGO_NAMES[$i]}"* ]]; then
