v2 pre-build-check

--- a/.github/actions/pre-build-checks-plugin/action.yml
+++ b/.github/actions/pre-build-checks-plugin/action.yml
@@ -141,6 +141,7 @@ runs:
         fi
       shell: bash
 
+      # Send status to Slack 
     - name: Send slack notification
       if: ${{ ! cancelled() }}
       uses: slackapi/slack-github-action@v1.26.0
