--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -7,7 +7,6 @@
 name: v2 Pre-build Checks
 
 env:
-  PLUGIN_NAME: 'accumulated-local-effect'
   ALGO_NAMES:  'accumulated_local_effect, robustness_toolbox, shap_toolbox'
   PLUGIN_NAMES: 'accumulated-local-effect, robustness-toolbox, shap-toolbox'
  
@@ -37,8 +36,8 @@ on:
         required: true
         default: $ALGO_NAME
 
-  push:
-    branches: [ ci/v2-workflows ]
+  # push:
+  #   branches: [ ci/v2-workflows ]
 
 # Allow one concurrent deployment
 # concurrency:
@@ -65,7 +64,7 @@ jobs:
         run: |
           echo "BRANCH_TO_TEST=${{ github.event.pull_request.head.ref }}" >> "$GITHUB_ENV"
           echo "PR_NUM=#${{ github.event.pull_request.number }}" >> "$GITHUB_ENV"
-          PR_FILES=$(gh pr view ${{ github.event.pull_request.number }} --json files --jq '.files[].path')
+          PR_FILES=$(gh pr view ${{ github.event.pull_request.number }} --json files --jq '.files[].path' | paste -sd "," -)
           echo "Files changed in this pull request:"
           echo "$PR_FILES"
           echo "CHANGED_FILES=${PR_FILES}" >> "$GITHUB_ENV"
@@ -76,41 +75,9 @@ jobs:
           echo "BRANCH_TO_TEST=${{ github.ref }}" >> "$GITHUB_ENV"
           echo "PR_NUM=000" >> $GITHUB_ENV
           PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename' | paste -sd "," -)
-          # PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename')
           echo "Files changed in this push:"
           echo "$PUSH_FILES"
           echo "CHANGED_FILES=${PUSH_FILES}" >> $GITHUB_ENV
-
-          # ALGO_NAMES=(${ALGO_NAMES//,/ })
-          # PLUGIN_NAMES=(${PLUGIN_NAMES//,/ })
-          # declare -A ALGO_PLUGIN_MAP
-
-          # for file in $PUSH_FILES; do
-          #   for i in "${!ALGO_NAMES[@]}"; do
-          #     # Check if the file name contains the algorithm name
-          #     if [[ $file == *"${ALGO_NAMES[$i]}"* ]]; then
-          #       # Add algo name and corresponding plugin name to the associative array
-          #       ALGO_PLUGIN_MAP["${ALGO_NAMES[$i]}"]="${PLUGIN_NAMES[$i]}"
-          #     fi
-          #   done
-          # done
-
-          # # Extract keys (algo_name) from ALGO_PLUGIN_MAP map
-          # ALGO_TO_TEST=(${!ALGO_PLUGIN_MAP[@]})
-          # # Extract values (plugin_name) from ALGO_PLUGIN_MAP map
-          # PLUGIN_TO_TEST=(${ALGO_PLUGIN_MAP[@]})
-
-          # echo "ALGO_TO_TEST=${ALGO_TO_TEST[*]}" >> "$GITHUB_ENV"
-          # echo "PLUGIN_TO_TEST=${PLUGIN_TO_TEST[*]}" >> "$GITHUB_ENV"
-          # echo "Algorithms to test: ${ALGO_TO_TEST[*]}"
-          # echo "Plugins to test: ${PLUGIN_TO_TEST[*]}"
-
-          # matrix_include=$(for i in "${!ALGO_TO_TEST[@]}"; do echo "{\"algo_name\":\"${ALGO_TO_TEST[$i]}\", \"plugin_name\":\"${PLUGIN_TO_TEST[$i]}\"}"; done | jq -s . | tr -d '[:space:]')
-          # MATRIX="{\"include\":$matrix_include}"
-          # echo $MATRIX
-
-          # echo "branch_to_test=${{ github.ref }}" >> $GITHUB_OUTPUT
-          # echo "matrix={\"include\":$matrix_include}" >> $GITHUB_OUTPUT
 
       - name: Prepare Matrix
         id: prep_matrix
@@ -166,7 +133,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJson(needs.init-pre-build-checks.outputs.matrix) }}
-      fail-fast: true
+      fail-fast: false
       max-parallel: 1
     steps:
       - name: Checkout code
@@ -186,16 +153,3 @@ jobs:
           algo_name: ${{ matrix.algo_name }}
           slack_url: ${{ secrets.SLACK_WEBHOOK_CI }}
 
-      # - name: Send slack notification
-      #   if: ${{ ! cancelled() }}
-      #   uses: slackapi/slack-github-action@v1.26.0
-      #   with:
-      #     payload: |
-      #       {
-      #         "workflow": "${{ github.repository }} | ${{ github.workflow }} | ${{ needs.pre-build-checks.outputs.PR_NUM }}",
-      #         "status": "${{ job.status }}",
-      #         "details": "${{ steps.pre_build_checks.outputs.unit_test_status }} | ${{ steps.pre_build_checks.outputs.code_quality_status }} | ${{ steps.pre_build_checks.outputs.dependency_status }} | ${{ steps.pre_build_checks.outputs.license_status }}",
-      #         "ref": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-      #       }
-      #   env:
-      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_CI }}
