--- a/.github/workflows/v2-pre-build-checks-plugin-fmt-r.yml
+++ b/.github/workflows/v2-pre-build-checks-plugin-fmt-r.yml
@@ -12,12 +12,12 @@ env:
 
 on:
   # Runs when a pull request to main is being assigned
-  pull_request:
-    types: [ assigned, synchronize ]
-    branches:
-      - 'v2.x'
-    paths:
-      - 'stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/**'
+  # pull_request:
+  #   types: [ assigned, synchronize ]
+  #   branches:
+  #     - 'v2.x'
+  #   paths:
+  #     - 'stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/**'
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
