--- a/.github/workflows/v2-pre-build-checks-test-engine.yml
+++ b/.github/workflows/v2-pre-build-checks-test-engine.yml
@@ -8,12 +8,12 @@ name: v2 Pre-build Checks (test-engine)
 
 on:
   # Runs when a pull request to main is being assigned
-  pull_request:
-    types: [ assigned, synchronize ]
-    branches:
-      - 'v2.x'
-    paths:
-      - 'aiverify-test-engine/**'
+  # pull_request:
+  #   types: [ assigned, synchronize ]
+  #   branches:
+  #     - 'v2.x'
+  #   paths:
+  #     - 'aiverify-test-engine/**'
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
