--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -14,10 +14,10 @@ env:
   
 on:
   # Runs when a pull request to main is being assigned
-  pull_request:
-    types: [ assigned, synchronize ]
-    branches:
-      - 'v2.x'
+  # pull_request:
+  #   types: [ assigned, synchronize ]
+  #   branches:
+  #     - 'v2.x'
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
@@ -36,8 +36,8 @@ on:
         required: true
         default: $ALGO_NAME
 
-  # push:
-  #   branches: [ ci/v2-workflows ]
+  push:
+    branches: [ ci/v2-workflows ]
 
 # Allow one concurrent deployment
 # concurrency:
