--- a/.github/workflows/v2-pre-build-checks.yml
+++ b/.github/workflows/v2-pre-build-checks.yml
@@ -14,10 +14,10 @@ env:
   
 on:
   # Runs when a pull request to main is being assigned
-  # pull_request:
-  #   types: [ assigned, synchronize ]
-  #   branches:
-  #     - 'v2.x'
+  pull_request:
+    types: [ assigned, synchronize ]
+    branches:
+      - 'v2.x'
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
@@ -36,8 +36,8 @@ on:
         required: true
         default: $ALGO_NAME
 
-  push:
-    branches: [ ci/v2-workflows ]
+  # push:
+  #   branches: [ ci/v2-workflows ]
 
 # Allow one concurrent deployment
 # concurrency:
@@ -64,7 +64,8 @@ jobs:
         run: |
           echo "BRANCH_TO_TEST=${{ github.event.pull_request.head.ref }}" >> "$GITHUB_ENV"
           echo "PR_NUM=#${{ github.event.pull_request.number }}" >> "$GITHUB_ENV"
-          PR_FILES=$(gh pr view ${{ github.event.pull_request.number }} --json files --jq '.files[].path' | paste -sd "," -)
+          PR_FILES=$(gh api repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files --jq '.[].filename' | paste -sd "," -)
+          # PR_FILES=$(gh pr view ${{ github.event.pull_request.number }} --json files --jq '.files[].path' | paste -sd "," -)
           echo "Files changed in this pull request:"
           echo "$PR_FILES"
           echo "CHANGED_FILES=${PR_FILES}" >> $GITHUB_ENV
