--- a/.github/actions/pre-build-checks-plugin/action.yml
+++ b/.github/actions/pre-build-checks-plugin/action.yml
@@ -62,6 +62,7 @@ runs:
 
     # Checkout code
     - name: Checkout code (plugin)
+      if: ${{ env.ALGO_NAME != 'test_engine' }}
       uses: actions/checkout@v4
       with:
         ref: ${{ env.BRANCH_TO_TEST }}
@@ -71,15 +72,15 @@ runs:
           .ci
           .github/actions/pre-build-checks-plugin
 
-    # - name: Checkout code (test-engine)
-    #   uses: actions/checkout@v4
-    #   if {{ env.ALGO_NAME == 'test_engine' }}
-    #   with:
-    #     ref: ${{ env.BRANCH_TO_TEST }}
-    #     sparse-checkout: |
-    #       aiverify-test-engine
-    #       .ci
-    #       .github/actions/pre-build-checks-plugin
+    - name: Checkout code (test-engine)
+      if: ${{ env.ALGO_NAME == 'test_engine' }}
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ env.BRANCH_TO_TEST }}
+        sparse-checkout: |
+          aiverify-test-engine
+          .ci
+          .github/actions/pre-build-checks-plugin
 
     # Setup python    
     - name: Setup python 3.11
@@ -148,7 +149,7 @@ runs:
     - name: Dependency analysis (vulnerabilities & licenses)
       id: dependency_analysis
       if: ${{ ! cancelled() }}
-      working-directory: ${{ github.workspace }}/{{ env.WDIR }}
+      working-directory: ${{ github.workspace }}/${{ env.WDIR }}
       run: |
         set +e
         bash ../../../../.ci/run-pip-audit.sh aiverify_${{ env.ALGO_NAME }}
