--- a/.github/actions/pre-build-checks-plugin/action.yml
+++ b/.github/actions/pre-build-checks-plugin/action.yml
@@ -54,8 +54,10 @@ runs:
         echo "ALGO_NAME=${{ inputs.algo_name }}" >> $GITHUB_ENV
         if [ "${{ inputs.algo_name }}" == "test_engine" ]; then
           echo "WDIR=aiverify-test-engine" >> $GITHUB_ENV
+          echo "CI_DIR=../.ci" >> $GITHUB_ENV
         else
           echo "WDIR=stock-plugins/aiverify.stock.${{ inputs.plugin_name }}/algorithms/${{ inputs.algo_name }}" >> $GITHUB_ENV
+          echo "CI_DIR=../../../../.ci" >> $GITHUB_ENV
         fi        
         echo "STATUS=success" >> $GITHUB_ENV
       shell: bash
@@ -112,10 +114,10 @@ runs:
       if: ${{ ! cancelled() }}
       run: |      
           set +e
-          bash ../../../../.ci/run-test.sh aiverify_${{ env.ALGO_NAME }} -m
-          source ../../../../.ci/gen_pre_build_summ.sh test aiverify_${{ env.ALGO_NAME }}
+          bash ${{ env.CI_DIR }}/run-test.sh aiverify_${{ env.ALGO_NAME }} -m
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh test aiverify_${{ env.ALGO_NAME }}
           test_status=$?
-          source ../../../../.ci/gen_pre_build_summ.sh coverage aiverify_${{ env.ALGO_NAME }}
+          source ${{ env.CI_DIR }}/gen_pre_build_summ.sh coverage aiverify_${{ env.ALGO_NAME }}
           coverage_status=$?
           echo "unit_test_status=$UNITTEST_SUMMARY" >> $GITHUB_OUTPUT
           echo "code_coverage_status=$COVERAGE_SUMMARY" >> $GITHUB_OUTPUT
@@ -133,9 +135,9 @@ runs:
       working-directory: ${{ github.workspace }}/${{ env.WDIR }}
       run: |
         set +e
-        cp ../../../../.ci/.flake8 .
-        bash ../../../../.ci/run-flake8.sh aiverify_${{ env.ALGO_NAME }}
-        source ../../../../.ci/gen_pre_build_summ.sh lint aiverify_${{ env.ALGO_NAME }}
+        cp ${{ env.CI_DIR }}/.flake8 .
+        bash ${{ env.CI_DIR }}/run-flake8.sh aiverify_${{ env.ALGO_NAME }}
+        source ${{ env.CI_DIR }}/gen_pre_build_summ.sh lint aiverify_${{ env.ALGO_NAME }}
         lint_status=$?
         echo "code_quality_status=$LINT_SUMMARY" >> $GITHUB_OUTPUT
         set -e
@@ -152,10 +154,10 @@ runs:
       working-directory: ${{ github.workspace }}/${{ env.WDIR }}
       run: |
         set +e
-        bash ../../../../.ci/run-pip-audit.sh aiverify_${{ env.ALGO_NAME }}
-        source ../../../../.ci/gen_pre_build_summ.sh dependency aiverify_${{ env.ALGO_NAME }}
+        bash ${{ env.CI_DIR }}/run-pip-audit.sh aiverify_${{ env.ALGO_NAME }}
+        source ${{ env.CI_DIR }}/gen_pre_build_summ.sh dependency aiverify_${{ env.ALGO_NAME }}
         dep_status=$?
-        source ../../../../.ci/gen_pre_build_summ.sh license aiverify_${{ env.ALGO_NAME }}
+        source ${{ env.CI_DIR }}/gen_pre_build_summ.sh license aiverify_${{ env.ALGO_NAME }}
         lic_status=$?
         echo "dependency_status=$DEPENDENCY_SUMMARY" >> $GITHUB_OUTPUT
         echo "license_status=$LICENSE_SUMMARY" >> $GITHUB_OUTPUT
