--- a/.github/actions/pre-build-checks-plugin/action.yml
+++ b/.github/actions/pre-build-checks-plugin/action.yml
@@ -96,7 +96,7 @@ runs:
       working-directory: ${{ github.workspace }}/${{ env.WDIR }}
       run: |
         echo "Install dependencies"
-        if [ "${{ inputs.algo_name }}" == "test-engine" ]; then
+        if [ "${{ inputs.algo_name }}" == "test_engine" ]; then
           pip install .[all] /dev/null
         else
           pip install . > /dev/null
