move lib and pipeline files under src directory

--- a/aiverify-test-engine-worker/pyproject.toml
+++ b/aiverify-test-engine-worker/pyproject.toml
@@ -29,6 +29,8 @@ classifiers = [
 dependencies = [
   "valkey[libvalkey]==6.*",
   "python-dotenv>=1.0.1",
+  "pydantic==2.*",
+  "jsonschema==4.*",
 ]
 
 [tool.hatch.envs.default]
