--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -3,13 +3,13 @@
 name: Software Composition Analysis
 
 on:
- # Runs when a pull request review is being submitted
-  pull_request_review:
-   types: [submitted]
-   branches:
-     - 'main'
-     - 'v0.*'
-     - 'v2.x'
+#  # Runs when a pull request review is being submitted
+#   pull_request_review:
+#    types: [submitted]
+#    branches:
+#      - 'main'
+#      - 'v0.*'
+#      - 'v2.x'
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
